--- a/talk_at_me/package.json
+++ b/talk_at_me/package.json
@@ -10,6 +10,8 @@
   "author": "alden jones",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "socket.io": "^2.1.1",
+    "wayback-machine": "^0.2.1"
   }
 }
