--- a/talk_adventure/functions/package.json
+++ b/talk_adventure/functions/package.json
@@ -9,6 +9,7 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
+    "actions-on-google": "^2.4.1",
     "firebase-admin": "~6.0.0",
     "firebase-functions": "^2.0.3",
     "random-js": "^1.0.8"
